- add container_id to session - create scheduler.py - add container lifetime in minutes to env file - edit result view to show message if container id is empty - fixed firefox iframe css bug with display none - fixed style issue in firefox with spacing - renamed run_model_container to run_container

--- a/assets/custom/style.css
+++ b/assets/custom/style.css
@@ -32,7 +32,7 @@ select {
 	padding: 10px 32px;
 	text-align: center;
 	display: block;
-	margin: auto;
+	margin: 10px auto;
 	text-decoration: none;
 	font-size: 16px;
 	cursor: pointer;
@@ -124,7 +124,7 @@ a.next-button {
 }
 
 .not-visible {
-  display: none;
+  visibility:hidden;
 }
 
 .red-bg {
